# artificial_neural_networks

./: .gitignore  LICENSE  README.md  activation_functions.hpp  core.hpp  initializer_functions.hpp  loss_functions.hpp  neural_network.hpp  optimizers.hpp  simd.hpp
sample/: CMakeLists.txt  build.bat  build.sh  build_run.bat  build_run.sh  main.cpp  soybean_data.h  timer.h
sample/data/: soybean_prices.csv
